2005-01-22 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotn2313.h (SPM_PAGESIZE): Add. 
	* include/avr/iotn24.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn25.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn261.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn44.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn45.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn461.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn84.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn85.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn861.h (SPM_PAGESIZE): (Ditto.).

2006-01-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Makefile.am (EXTRA_DIST): add ChangeLog-2005.

2005-01-09 Anatoly Sokolov <aesok@post.ru>

	* libm/fplib/acos.S : Use XCALL/XJMP instead RCALL/RJMP 
	for calling __addsf3/__subsf3/__mulsf3/__divsf3 functions.
	* libm/fplib/cosh.S : (Ditto.).
	* libm/fplib/exp.S : (Ditto.).
	* libm/fplib/fmod.S : (Ditto.).
	* libm/fplib/fp_cosinus.S : (Ditto.).
	* libm/fplib/log.S : (Ditto.).
	* libm/fplib/log10.S : (Ditto.).
	* libm/fplib/pow.S : (Ditto.).
	* libm/fplib/sin.S : (Ditto.).
	* libm/fplib/sinh.S : (Ditto.).
	* libm/fplib/strtod.S : (Ditto.).
	* libm/fplib/tan.S : (Ditto.).
	* libm/fplib/tanh.S : (Ditto.).
	* libm/fplib/modf.S : Use XCALL/XJMP instead RCALL/RJMP 
	__addsf3/__fixsfsi/__floatsisf functions.
	* libm/fplib/asin.S : Use RCALL/RJMP instead XCALL/XJMP 
	for calling __fp_nanEDOM/__fp_powerseries functions.
	* libm/fplib/atan.S : Use RCALL/RJMP instead XCALL/XJMP 
	for calling __fp_inverse/square functions.
	* libm/fplib/atan2.S : Use RCALL/RJMP instead XCALL/XJMP 
	for calling __fp_nanERANGE/atan functions.

2006-01-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Galen Seitz:
	* avr-libc.spec.in: Fixed examples installation.
 
2006-01-06 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/Makefile.am: Fix the source directory for
	example installation so it will work when starting from
	outside $(top_srcdir).  This fixes "make distcheck".